Including JS and some changes

--- a/Mindspace_Interview/User_Area_Invite.html
+++ b/Mindspace_Interview/User_Area_Invite.html
@@ -16,9 +16,13 @@
   <div class="left-aside">
     <div class="logo"><img class="intro-circle-logo" src="/images/Intro_Circle_Logo.svg" alt="Intro Circle"></img>
     </div>
-    <button class="profile-button"><img class="profile-icon" src="./images/Profile.png" alt="Profile Icon"></img>Profile</button>
-    <button class="profile-button"><img class="invite-icon" src="./images/Invite.png" alt="Invite Icon"></img>Invite</button>
-    <button class="profile-button"><img class="logout-logo" src="./images/Logout.png" alt="Logout Icon"></img>Logout</button>
+    <button class="profile-button">
+      <img class="profile-icon" src="./images/Profile.png" alt="Profile Icon"></img>Profile
+    </button>
+    <button class="profile-button">
+      <img class="invite-icon" src="./images/Invite.png" alt="Invite Icon"></img>Invite</button>
+    <button class="profile-button">
+      <img class="logout-logo" src="./images/Logout.png" alt="Logout Icon"></img>Logout</button>
   </div>
   <!--Main Box-->
   <div class="main">
