--- a/Mindspace_Interview/Interview_Q5_Final.html
+++ b/Mindspace_Interview/Interview_Q5_Final.html
@@ -6,7 +6,7 @@
     <title>Intro Circle Interview</title>
     <link rel="stylesheet" href="style/interview-style.css">
     <link rel="stylesheet" href="style/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
   </head>
 
