--- a/Mindspace_Interview/Log_In.html
+++ b/Mindspace_Interview/Log_In.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/button.css">
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/template_page.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
   </head>
 
