--- a/Mindspace_Interview/User_Area_Profile.html
+++ b/Mindspace_Interview/User_Area_Profile.html
@@ -60,27 +60,25 @@
           <div class="interests-card">
             <h class="card-title">UNI Schwerpunkt</h>
             <a href="#" class="text edit left-edit">edit</a>
-            <div class="dropdown">
-              <select id="myDropdown" class="dropdown-content">
-                <option class="dropdown-content">+</option>
-                <option class="dropdown-content">++</option>
-                <option class="dropdown-content">+++</option>
-              </select>
-              <h class="card-title">Praxis</h>
-              <select id="myDropdown" class="dropdown-content">
-                <option class="dropdown-content">+</option>
-                <option class="dropdown-content">++</option>
-                <option class="dropdown-content">+++</option>
-              </select>
+            <div class="interest-list">
+              <p class="interest-item">Acting</p><p class="interest-item">Body Paint</p><p class="interest-item">Craft</p>
+              <p class="interest-item">Bikini Shoot</p><p class="interest-item">Creative</p><p class="interest-item">Art</p>
             </div>
+
+              <h class="card-title">Praxis</h>
+              <div class="interest-list">
+                <p class="interest-item">Acting</p><p class="interest-item">Body Paint</p><p class="interest-item">Craft</p>
+                <p class="interest-item">Bikini Shoot</p><p class="interest-item">Creative</p><p class="interest-item">Art</p>
+              </div>
 
           </div>
 
 
           <section>
-            <div class="skills-card">
+            <div class="card language-card">
               <h class="card-title">Languages</h>
               <a href="#" class="text edit left-edit">edit</a>
+
               <p>Language</p>
               <div class="dropdown">
                 <select id="myDropdown" class="dropdown-content">
@@ -88,83 +86,94 @@
                   <option class="dropdown-content">++</option>
                   <option class="dropdown-content">+++</option>
                 </select>
-                <p>Language</p>
-                <select id="myDropdown" class="dropdown-content">
+              </div>
+              <p>Language</p>
+              <div class="dropdown">
+              <select id="myDropdown" class="dropdown-content">
                   <option class="dropdown-content">+</option>
                   <option class="dropdown-content">++</option>
                   <option class="dropdown-content">+++</option>
                 </select>
-                <p>Language</p>
-                <div class="dropdown">
-                  <select id="myDropdown" class="dropdown-content">
+</ds>
+
+              <p>Language</p>
+              <div class="dropdown">
+                <select id="myDropdown" class="dropdown-content">
                     <option class="dropdown-content">+</option>
                     <option class="dropdown-content">++</option>
                     <option class="dropdown-content">+++</option>
                   </select>
-                </div>
-                <h class="card-title">IT Skills</h>
-                <a href="#" class="text edit left-edit">edit</a>
-                <div class="dropdown">
-                  <p>EXCEL</p>
-                  <select id="myDropdown" class="dropdown-content">
-                    <option>+</option>
-                    <option>++</option>
-                    <option>+++</option>
-                    </select>
-                  <p>POWERPOINT</p>
-                  <select id="myDropdown" class="dropdown-content">
-                    <option>+</option>
-                    <option>++</option>
-                    <option>+++</option>
-                    </select>
-                  <p>WORD</p>
-                  <select id="myDropdown" class="dropdown-content">
-                    <option>+</option>
-                    <option>++</option>
-                    <option>+++</option>
-                    </select>
-
-                  <a href="#" class="text edit">edit</a>
-                  <select id="myDropdown" class="dropdown-content">
-                    <option class="dropdown-content">+</option>
-                    <option class="dropdown-content">++</option>
-                    <option class="dropdown-content">+++</option>
-                  </select>
-
-
-                  </select>
-                </div>
               </div>
-          </section>
-          <div class="details-card">
-            <h class="detail-title">Ausland</h>
-            <h class="detail-title">Ehrenamt</h>
-          </div>
-          <div class="user-save">
-            <form>
-              <input class="edit user-save-button save" type="button" value="SPEICHERN" onClick="doSaveAs()">
-            </form>
-          </div>
-        </section>
+            </div>
+      </div>
 
-        <section class="main-section university-statistics-box">
-          <div>
-            <h class="title-available">PROFIL FÜR UNTERNEHMEN ANONYM SICHTBAR</h>
-            <form>
-              <input class="edit user-ja user-save-button" type="button" value="JA/" onClick="doSaveAs()">
-              <input class="edit user-nein user-save-button" type="button" value="NEIN" onClick="doSaveAs()">
-            </form>
-          </div>
-        </section>
+      <div class="card it-card">
+        <h class="card-title">IT Skills</h>
+        <a href="#" class="text edit left-edit">edit</a>
+        <div class="dropdown">
+
+          <p class="it-card-item">EXCEL</p>
+          <select id="myDropdown" class="dropdown-content">
+            <option>+</option>
+            <option>++</option>
+            <option>+++</option>
+          </select>
+
+          <p class="it-card-item">POWERPOINT</p>
+            <select id="myDropdown" class="dropdown-content">
+              <option>+</option>
+              <option>++</option>
+              <option>+++</option>
+            </select>
+
+          <p class="it-card-item">WORD</p>
+            <select id="myDropdown" class="dropdown-content">
+              <option>+</option>
+              <option>++</option>
+              <option>+++</option>
+            </select>
         </div>
-        <!-- Small side Box -->
-        <div class="aside">
-          <div class="aside-element">Upload Documents
-            <button class="document-button"> <img class="document-icon" src="./images/Documents.png" alt="Document Icon"></img></button>
-          </div>
-        </div>
-    </section>
+        <a href="#" class="text edit">edit</a>
+        <select id="myDropdown" class="dropdown-content">
+                    <option class="dropdown-content">+</option>
+                    <option class="dropdown-content">++</option>
+                    <option class="dropdown-content">+++</option>
+                  </select>
+
+
+        </select>
+      </div>
+  </div>
+  </section>
+  <div class="details-card">
+    <h class="detail-title">Ausland</h>
+    <h class="detail-title">Ehrenamt</h>
+  </div>
+  <div class="user-save">
+    <form>
+      <input class="edit user-save-button save" type="button" value="SPEICHERN" onClick="doSaveAs()">
+    </form>
+  </div>
+  </section>
+
+  <section class="main-section university-statistics-box">
+    <div>
+      <h class="title-available">PROFIL FÜR UNTERNEHMEN ANONYM SICHTBAR</h>
+      <form>
+        <input class="edit user-ja user-save-button" type="button" value="JA/" onClick="doSaveAs()">
+        <input class="edit user-nein user-save-button" type="button" value="NEIN" onClick="doSaveAs()">
+      </form>
     </div>
+  </section>
+  </div>
+  <!-- Small side Box -->
+  <div class="aside">
+    <div class="aside-element">Upload Documents
+      <button class="document-button"> <img class="document-icon" src="./images/Documents.png" alt="Document Icon"></img></button>
+    </div>
+  </div>
+  </section>
+  </div>
 
 </body>
 
