Updated logo alternate

--- a/Mindspace_Interview/User_Area_Profile.html
+++ b/Mindspace_Interview/User_Area_Profile.html
@@ -23,7 +23,7 @@
     }
   </script>
   <div class="left-aside">
-    <div class="logo"><img class="intro-circle-logo" src="/images/Intro_Circle_Logo.svg" alt="Intro Circle"></img>
+    <div class="logo"><img class="intro-circle-logo" src="/images/Intro_Circle_Logo.svg" alt="Intro Circle Logo"></img>
     </div>
     <button class="profile-button"><img class="profile-icon" id="profile-avatar" src="./images/Profile.png" alt="Profile Icon"></img>Profile</button>
     <button class="profile-button"><img id="invite-icon" class="profile-icon" src="./images/Invite.png" alt="Invite Icon"></img>Invite</button>
