--- a/Mindspace_Interview/User_Area_Profile.html
+++ b/Mindspace_Interview/User_Area_Profile.html
@@ -10,6 +10,10 @@
   <link rel="stylesheet" href="style/template_page.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+  <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -23,11 +27,11 @@
     }
   </script>
   <div class="left-aside">
-    <div class="logo"><img class="intro-circle-logo" src="/images/Intro_Circle_Logo.svg" alt="Intro Circle Logo"></img>
+    <div class="logo"><img class="intro-circle-logo" src="../images/Intro_Circle_Logo.png" alt="Intro Circle Logo"></img>
     </div>
-    <button class="profile-button"><img class="profile-icon" id="profile-avatar" src="./images/Profile.png" alt="Profile Icon"></img>Profile</button>
-    <button class="profile-button"><img id="invite-icon" class="profile-icon" src="./images/Invite.png" alt="Invite Icon"></img>Invite</button>
-    <button class="profile-button"><img id="logout-logo" class="profile-icon" src="./images/Logout.png" alt="Logout Icon"></img>Logout</button>
+    <button class="profile-button"><img class="profile-icon" id="profile-avatar" src="../images/Profile.png" alt="Profile Icon"></img>Profile</button>
+    <button class="profile-button"><img id="invite-icon" class="profile-icon" src="../images/Invite.png" alt="Invite Icon"></img>Invite</button>
+    <button class="profile-button"><img id="logout-logo" class="profile-icon" src="../images/Logout.png" alt="Logout Icon"></img>Logout</button>
   </div>
   <!--Main Box-->
   <div class="main">
@@ -57,22 +61,80 @@
             <!--Plz check if data-placeholder is working-->
             <input type="text" class="bio-summary" placeholder="In connection with this appellative of 'Whalebone whales,' it is of great importance to mention, that however such a nomenclature may be convenient in facilitating allusions to some kind of whales."></input>
           </div>
-          <div class="interests-card">
-            <h class="card-title">UNI Schwerpunkt</h>
-            <a href="#" class="text edit left-edit">edit</a>
-            <div class="interest-list">
-              <p class="interest-item">Acting</p><p class="interest-item">Body Paint</p><p class="interest-item">Craft</p>
-              <p class="interest-item">Bikini Shoot</p><p class="interest-item">Creative</p><p class="interest-item">Art</p>
+          <div class="mini-container">
+            <div class="interests-card">
+              <div class="interest-card-header">
+                <h class="card-title">UNI Schwerpunkt</h>
+                <a href="#" id="edit-group" class="text edit left-edit">edit</a>
+              </div>
+              <div class="interest-list">
+                <div class="interest-item-card">
+                  <p class="interest-item passion-item">Acting</p>
+                  <input class="interest-input hide" type="text" value="Acting" />
+                </div>
+                <div class="interest-item-card">
+                  <p class="interest-item passion-item">Body Paint</p>
+                  <input  class="interest-input hide" type="text" value="Body Paint" />
+                </div>
+
+                <div class="interest-item-card">
+                  <p class="interest-item passion-item">Craft</p>
+                  <input class="interest-input hide" type="text" value="Craft" />
+                </div>
+                <div class="interest-item-card">
+                  <p class="interest-item passion-item">Bikini Shoot</p>
+                  <input class="interest-input hide" type="text" value="Bikini Shoot" />
+                </div>
+
+                <div class="interest-item-card">
+                  <p class="interest-item passion-item">Creative</p>
+                  <input class="interest-input hide" type="text" value="Creative" />
+                </div>
+
+                <div class="interest-item-card">
+                  <p class="interest-item passion-item">Art</p>
+                  <input class="interest-input hide" type="text" value="Art" />
+                </div>
+              </div>
             </div>
 
+          <div class="interests-card">
+            <div class="interest-card-header">
               <h class="card-title">Praxis</h>
-              <div class="interest-list">
-                <p class="interest-item">Acting</p><p class="interest-item">Body Paint</p><p class="interest-item">Craft</p>
-                <p class="interest-item">Bikini Shoot</p><p class="interest-item">Creative</p><p class="interest-item">Art</p>
+              <a href="#" id="edit-practice-group" class="text edit right-edit">edit</a>
+            </div>
+            <div class="interest-list">
+              <div class="interest-item-card">
+                <p class="interest-item practice-item">Acting</p>
+                <input class="practice-input hide" type="text" value="Acting" />
+              </div>
+              <div class="interest-item-card">
+                <p class="interest-item practice-item">Body Paint</p>
+                <input  class="practice-input hide" type="text" value="Body Paint" />
               </div>
 
+              <div class="interest-item-card">
+                <p class="interest-item practice-item">Craft</p>
+                <input class="practice-input hide" type="text" value="Craft" />
+              </div>
+              <div class="interest-item-card">
+                <p class="interest-item practice-item">Bikini Shoot</p>
+                <input class="practice-input hide" type="text" value="Bikini Shoot" />
+              </div>
+
+              <div class="interest-item-card">
+                <p class="interest-item practice-item">Creative</p>
+                <input class="practice-input hide" type="text" value="Creative" />
+              </div>
+
+              <div class="interest-item-card">
+                <p class="interest-item practice-item">Art</p>
+                <input class="practice-input hide" type="text" value="Art" />
+              </div>
+            </div>
           </div>
 
+        </div>
 
           <section>
             <div class="card language-card">
@@ -89,82 +151,81 @@
               </div>
               <p>Language</p>
               <div class="dropdown">
-              <select id="myDropdown" class="dropdown-content">
+                <select id="myDropdown" class="dropdown-content">
                   <option class="dropdown-content">+</option>
                   <option class="dropdown-content">++</option>
                   <option class="dropdown-content">+++</option>
                 </select>
-</ds>
+                </ds>
 
-              <p>Language</p>
-              <div class="dropdown">
-                <select id="myDropdown" class="dropdown-content">
+                <p>Language</p>
+                <div class="dropdown">
+                  <select id="myDropdown" class="dropdown-content">
                     <option class="dropdown-content">+</option>
                     <option class="dropdown-content">++</option>
                     <option class="dropdown-content">+++</option>
                   </select>
+                </div>
               </div>
             </div>
-      </div>
 
-      <div class="card it-card">
-        <h class="card-title">IT Skills</h>
-        <a href="#" class="text edit left-edit">edit</a>
-        <div class="dropdown">
+            <div class="card it-card">
+              <h class="card-title">IT Skills</h>
+              <a href="#" class="text edit left-edit">edit</a>
+              <div class="dropdown">
 
-          <p class="it-card-item">EXCEL</p>
-          <select id="myDropdown" class="dropdown-content">
+                <p class="it-card-item">EXCEL</p>
+                <select id="myDropdown" class="dropdown-content">
             <option>+</option>
             <option>++</option>
             <option>+++</option>
           </select>
 
-          <p class="it-card-item">POWERPOINT</p>
-            <select id="myDropdown" class="dropdown-content">
+                <p class="it-card-item">POWERPOINT</p>
+                <select id="myDropdown" class="dropdown-content">
               <option>+</option>
               <option>++</option>
               <option>+++</option>
             </select>
 
-          <p class="it-card-item">WORD</p>
-            <select id="myDropdown" class="dropdown-content">
+                <p class="it-card-item">WORD</p>
+                <select id="myDropdown" class="dropdown-content">
               <option>+</option>
               <option>++</option>
               <option>+++</option>
             </select>
-        </div>
-        <a href="#" class="text edit">edit</a>
-        <select id="myDropdown" class="dropdown-content">
+              </div>
+              <a href="#" class="text edit">edit</a>
+              <select id="myDropdown" class="dropdown-content">
                     <option class="dropdown-content">+</option>
                     <option class="dropdown-content">++</option>
                     <option class="dropdown-content">+++</option>
                   </select>
 
 
-        </select>
+              </select>
+            </div>
+      </section>
+      <div class="details-card">
+        <h class="detail-title">Ausland</h>
+        <h class="detail-title">Ehrenamt</h>
       </div>
-  </div>
-  </section>
-  <div class="details-card">
-    <h class="detail-title">Ausland</h>
-    <h class="detail-title">Ehrenamt</h>
-  </div>
-  <div class="user-save">
-    <form>
-      <input class="edit user-save-button save" type="button" value="SPEICHERN" onClick="doSaveAs()">
-    </form>
-  </div>
-  </section>
+      <div class="user-save">
+        <form>
+          <input class="edit user-save-button save" type="button" value="SPEICHERN" onClick="doSaveAs()">
+        </form>
+      </div>
+      </section>
 
-  <section class="main-section university-statistics-box">
-    <div>
-      <h class="title-available">PROFIL FÜR UNTERNEHMEN ANONYM SICHTBAR</h>
-      <form>
-        <input class="edit user-ja user-save-button" type="button" value="JA/" onClick="doSaveAs()">
-        <input class="edit user-nein user-save-button" type="button" value="NEIN" onClick="doSaveAs()">
-      </form>
-    </div>
-  </section>
+      <section class="main-section university-statistics-box">
+        <div>
+          <h class="title-available">PROFIL FÜR UNTERNEHMEN ANONYM SICHTBAR</h>
+          <form>
+            <input class="edit user-ja user-save-button" type="button" value="JA/" onClick="doSaveAs()">
+            <input class="edit user-nein user-save-button" type="button" value="NEIN" onClick="doSaveAs()">
+          </form>
+        </div>
+      </section>
   </div>
   <!-- Small side Box -->
   <div class="aside">
@@ -174,7 +235,7 @@
   </div>
   </section>
   </div>
-
+<script src="newScript.js" type="text/javascript"></script>
 </body>
 
 </html>
