--- a/Mindspace_Interview/User_Area_Profile.html
+++ b/Mindspace_Interview/User_Area_Profile.html
@@ -3,17 +3,19 @@
 <head>
   <meta charset="utf-8">
   <title>Intro Circle | Profile</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+  <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style/box.css">
   <link rel="stylesheet" href="style/text.css">
   <link rel="stylesheet" href="style/button.css">
   <link rel="stylesheet" href="style/normalize.css">
   <link rel="stylesheet" href="style/template_page.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-  <script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -136,38 +138,25 @@
 
         </div>
 
-          <section>
-            <div class="card language-card">
-              <h class="card-title">Languages</h>
-              <a href="#" class="text edit left-edit">edit</a>
-
-              <p>Language</p>
-              <div class="dropdown">
-                <select id="myDropdown" class="dropdown-content">
-                  <option class="dropdown-content">+</option>
-                  <option class="dropdown-content">++</option>
-                  <option class="dropdown-content">+++</option>
-                </select>
-              </div>
-              <p>Language</p>
-              <div class="dropdown">
-                <select id="myDropdown" class="dropdown-content">
-                  <option class="dropdown-content">+</option>
-                  <option class="dropdown-content">++</option>
-                  <option class="dropdown-content">+++</option>
-                </select>
-                </ds>
-
+          <section class="card-wrapper">
+            <article class="card">
+              <header class="card-header">
+                <p class="card-title">Languages</p>
+                <a href="#" class="text edit left-edit">edit</a>
+              </header>
+              <main class="card-contents">
                 <p>Language</p>
                 <div class="dropdown">
-                  <select id="myDropdown" class="dropdown-content">
-                    <option class="dropdown-content">+</option>
-                    <option class="dropdown-content">++</option>
-                    <option class="dropdown-content">+++</option>
-                  </select>
+                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    +
+                  </button>
+                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="#">+</a>
+                    <a class="dropdown-item" href="#">++</a>
+                    <a class="dropdown-item" href="#">+++</a>
                 </div>
-              </div>
-            </div>
+                </div>
+            </article>
 
             <div class="card it-card">
               <h class="card-title">IT Skills</h>
@@ -230,7 +219,7 @@
   <!-- Small side Box -->
   <div class="aside">
     <div class="aside-element">Upload Documents
-      <button class="document-button"> <img class="document-icon" src="./images/Documents.png" alt="Document Icon"></img></button>
+      <button class="document-button"> <img class="document-icon" src="../images/Documents.png" alt="Document Icon"></img></button>
     </div>
   </div>
   </section>
