Updates styling of card border
and fixes dropdown buttons

--- a/Mindspace_Interview/User_Area_Profile.html
+++ b/Mindspace_Interview/User_Area_Profile.html
@@ -158,38 +158,49 @@
                 </div>
             </article>
 
-            <div class="card it-card">
-              <h class="card-title">IT Skills</h>
-              <a href="#" class="text edit left-edit">edit</a>
-              <div class="dropdown">
-
-                <p class="it-card-item">EXCEL</p>
-                <select id="myDropdown" class="dropdown-content">
-            <option>+</option>
-            <option>++</option>
-            <option>+++</option>
-          </select>
-
-                <p class="it-card-item">POWERPOINT</p>
-                <select id="myDropdown" class="dropdown-content">
-              <option>+</option>
-              <option>++</option>
-              <option>+++</option>
-            </select>
-
-                <p class="it-card-item">WORD</p>
-                <select id="myDropdown" class="dropdown-content">
-              <option>+</option>
-              <option>++</option>
-              <option>+++</option>
-            </select>
+            <section class="card-wrapper">
+              <article class="card">
+                <header class="card-header">
+                  <p class="card-title">IT Skills</p>
+                  <a href="#" class="text edit left-edit">edit</a>
+                </header>
+                <main class="card-contents">
+                  <p>EXCEL</p>
+                  <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      +
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                      <a class="dropdown-item" href="#">+</a>
+                      <a class="dropdown-item" href="#">++</a>
+                      <a class="dropdown-item" href="#">+++</a>
+                  </div>
+                  </div>
+                  <p>POWERPOINT</p>
+                  <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      +
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                      <a class="dropdown-item" href="#">+</a>
+                      <a class="dropdown-item" href="#">++</a>
+                      <a class="dropdown-item" href="#">+++</a>
+                  </div>
+                  </div>
+                  <p>WORD</p>
+                  <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      +
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                      <a class="dropdown-item" href="#">+</a>
+                      <a class="dropdown-item" href="#">++</a>
+                      <a class="dropdown-item" href="#">+++</a>
+                  </div>
+                  </div>
+              </article>
               </div>
-              <a href="#" class="text edit">edit</a>
-              <select id="myDropdown" class="dropdown-content">
-                    <option class="dropdown-content">+</option>
-                    <option class="dropdown-content">++</option>
-                    <option class="dropdown-content">+++</option>
-                  </select>
+
 
 
               </select>
