Updates dropdown button styling

--- a/Mindspace_Interview/User_Area_Profile.html
+++ b/Mindspace_Interview/User_Area_Profile.html
@@ -156,6 +156,28 @@
                     <a class="dropdown-item" href="#">+++</a>
                 </div>
                 </div>
+                <p>Language</p>
+                <div class="dropdown">
+                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    +
+                  </button>
+                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="#">+</a>
+                    <a class="dropdown-item" href="#">++</a>
+                    <a class="dropdown-item" href="#">+++</a>
+                </div>
+                </div>
+                <p>Language</p>
+                <div class="dropdown">
+                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    +
+                  </button>
+                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="#">+</a>
+                    <a class="dropdown-item" href="#">++</a>
+                    <a class="dropdown-item" href="#">+++</a>
+                </div>
+                </div>
             </article>
 
             <section class="card-wrapper">
