--- a/Mindspace_Interview/User_Area_Invite.html
+++ b/Mindspace_Interview/User_Area_Invite.html
@@ -14,15 +14,15 @@
 
 <body>
   <div class="left-aside">
-    <div class="logo"><img class="intro-circle-logo" src="/images/Intro_Circle_Logo.svg" alt="Intro Circle"></img>
+    <div class="logo"><img class="intro-circle-logo" src="../images/Intro_Circle_Logo.png" alt="Intro Circle"></img>
     </div>
     <button class="profile-button">
-      <img class="profile-icon" src="./images/Profile.png" alt="Profile Icon"></img>Profile
+      <img class="profile-icon" src="../images/Profile.png" alt="Profile Icon"></img>Profile
     </button>
     <button class="profile-button">
-      <img class="invite-icon" src="./images/Invite.png" alt="Invite Icon"></img>Invite</button>
+      <img class="invite-icon" src="../images/Invite.png" alt="Invite Icon"></img>Invite</button>
     <button class="profile-button">
-      <img class="logout-logo" src="./images/Logout.png" alt="Logout Icon"></img>Logout</button>
+      <img class="logout-logo" src="../images/Logout.png" alt="Logout Icon"></img>Logout</button>
   </div>
   <!--Main Box-->
   <div class="main">
